crates/ink/tests/ui/contract/fail/module-multiple-storages.stderr
error: encountered multiple ink! storage structs, expected exactly one
  --> tests/ui/contract/fail/module-multiple-storages.rs:2:1
   |
2  | / mod contract {
3  | |     #[ink(storage)]
4  | |     pub struct Contract {}
5  | |
...  |
27 | |     }
28 | | }
   | |_^

error: ink! storage struct here
 --> tests/ui/contract/fail/module-multiple-storages.rs:4:5
  |
4 |     pub struct Contract {}
  |     ^^^^^^^^^^^^^^^^^^^^^^

error: ink! storage struct here
  --> tests/ui/contract/fail/module-multiple-storages.rs:17:5
   |
17 |     pub struct Contract2 {}
   |     ^^^^^^^^^^^^^^^^^^^^^^^
